# be-conductor

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install.ps1  install.sh  main.py  merge-test-2.txt  merge-test.txt  pyproject.toml  test-file.txt  test-wt-merge.txt  uninstall.ps1  uninstall.sh
.github/workflows/: release.yml
be_conductor/api/: routes.py
be_conductor/notes/: export.py  store.py
be_conductor/notifications/: __init__.py  manager.py  webhook.py
be_conductor/proxy/: pty_wrapper.py
be_conductor/server/: app.py
be_conductor/sessions/: agent_session.py  protocol.py  provider_agent_session.py  registry.py  session.py
be_conductor/sessions/providers/: __init__.py  acp.py  base.py  opencode.py
be_conductor/static/: agent-view.html  index.html
be_conductor/utils/: config.py
be_conductor/worktrees/: __init__.py  manager.py  state.py
cli/: doctor.py  main.py
conductor/api/: routes.py
conductor/notifications/: __init__.py  manager.py  webhook.py
conductor/sessions/: registry.py  session.py
conductor/utils/: config.py
docs/: MACOS.md  WINDOWS.md  acp.md  autostart.md  headscale.md  https.md  intro.md  notification_slack.md  notification_telegram.md  opencode.md
docs/planned/: api-agent-loop.md  context-management.md  virtual-scrolling.md
static/: agent-view.html  index.html
tools/jetbrains/: updatePlugins.xml
tools/jetbrains/be-conductor-plugin/: README.md  build.gradle  gradle.properties  settings.gradle
tools/jetbrains/be-conductor-plugin/src/main/java/com/somniacs/beconductor/: AppShutdownListener.java  (+6 more)
tools/vscode/be-conductor-vscode/: README.md  be-conductor-launcher-0.1.0.vsix  extension.js  package-lock.json  package.json
tools/vscode/be-conductor-vscode/src/: api.js  config.js  createSession.js  serverRegistry.js  serverTree.js  sessionTree.js  updateCheck.js  worktreeTree.js
(+13 files in other folders)
