[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "be-conductor"
version = "0.3.54"
description = "Local orchestration layer for interactive terminal processes"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "click>=8.1.0",
    "httpx>=0.25.0",
    "qrcode>=7.0",
    "pyyaml>=6.0",
    "pyte>=0.8.0",
    "pywinpty>=2.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
agent = ["claude-agent-sdk>=0.1.0"]
# OpenCode SDK is installed from the `next` branch of the upstream repo
# because PyPI's `opencode-ai 0.1.0a36` is incompatible with current
# OpenCode servers (sends an empty body where `{}` is required). The
# `next` branch is auto-codegenned by Stainless and tracks the live
# OpenCode API. See docs/planned/agent-abstraction.md (Track 1 findings).
opencode = ["opencode-ai @ git+https://github.com/anomalyco/opencode-sdk-python.git@next"]

[tool.hatch.build.targets.wheel]
packages = ["be_conductor", "cli"]
artifacts = ["be_conductor/static/**"]

[project.scripts]
be-conductor = "cli.main:cli"
